--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "CheemsBot-MD",
+  "name": "VIHAGA -MD",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/DGXeon/CheemsBot-MD4",
-  "logo": "https://pbs.twimg.com/media/FO7fojOakAAyYgt?format=jpg&name=900x900",
+  "logo": "https://i.ibb.co/0fg52p7/20220715-162421.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
